+ Passport e FollowTable(Seguir)

--- a/Pipper-Back/composer.json
+++ b/Pipper-Back/composer.json
@@ -14,8 +14,9 @@
         "fzaninotto/faker": "^1.9",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
-        "laravellegends/pt-br-validator": "7.*" //garantir que isso aqui não está dando bug, caso dê bug em alguma coisa, provavel que tenha sido por causa disso.
+        "laravellegends/pt-br-validator": "7.*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
